--- a/TojoMobile/projects/cell/TJProjectListCell.xib
+++ b/TojoMobile/projects/cell/TJProjectListCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TJProjectListCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TJProjectListCell" id="KGk-i7-Jjw" customClass="TJProjectListCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -26,7 +26,7 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="ikf-8b-Ey3"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -139,7 +139,15 @@
                     </mask>
                 </variation>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="361" y="347"/>
+            <connections>
+                <outlet property="founderImageView" destination="l6D-dY-ca0" id="EJd-QR-w1D"/>
+                <outlet property="founderNameAndUniLabel" destination="LPB-Ud-f4B" id="c00-ww-jQF"/>
+                <outlet property="projectEndDateLabel" destination="wrR-eg-v2X" id="JIU-Oo-BpQ"/>
+                <outlet property="projectImageView" destination="GSm-TE-9pv" id="TPR-Nh-avl"/>
+                <outlet property="projectLabel" destination="K1o-5l-BJF" id="Y1t-lo-t7J"/>
+                <outlet property="projectNameLabel" destination="7bz-OW-i5G" id="m7G-lK-YYc"/>
+            </connections>
+            <point key="canvasLocation" x="389" y="402"/>
         </tableViewCell>
     </objects>
 </document>
